# Foundation

./: .gitignore  CMakeLists.txt
cmake/: AutoGenerate.cmake
foundation/: CMakeLists.txt  PlatformConfig.h
foundation/async/: LockFreeAllocator.h  LockFreeDeQueue.h  LockFreeList.cpp  LockFreeList.h  Locks.h  Task.cpp  Task.h  TaskScheduler.cpp  TaskScheduler.h  TaskSchedulerDefault.cpp  TaskSchedulerDefault.h  TaskSchedulerLockFree.cpp  TaskSchedulerLockFree.h  TaskSchedulerProfiler.cpp  TaskSchedulerProfiler.h  TasksAllocator.h  TasksAllocator.inl
foundation/platform/linux/: PlatformDefine-linux.h
foundation/platform/mac/: PlatformDefine-mac.h
foundation/src/: PlatformConfig.h  PlatformDefine.h  Task.cpp  Task.h  Task.inl  TaskScheduler.cpp  TaskScheduler.h
foundation/src/platform/: CMakeLists.txt
foundation/src/platform/android/: PlatformDefine-android.h
foundation/src/platform/win32/: PlatformDefine-win32.h
foundation/unit-test/: CMakeLists.txt  example.cpp
foundation/unit-test/async/: TaskSchedulerTestTasks.cpp  TaskSchedulerTestTasks.h  TaskScheduler_Tests.cpp
samples/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt  main.cpp
